--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Chakra+Petch:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap"
         rel="stylesheet">
-    <script defer src="./scripts/getDates.js"></script>
-    <script defer src="./scripts/courseListArray.js"></script>
+    <script defer src="./scripts/getdates.js"></script>
+    <script defer src="./scripts/courselistarray.js"></script>
 </head>
 
 <body>
@@ -51,7 +51,7 @@
             <section class="card">
                 <h2>Ohio, United States of America</h2>
                 <div class="card-body">
-                    <img src="./images/255px-Flag_of_the_United_States_(Pantone).svg.png" alt="United States Flag">
+                    <img src="./images/usa_flag.png" alt="United States Flag">
                     <p class="caption">Official Flag of the United States of America</p>
                 </div>
             </section>
