--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -13,7 +13,7 @@
     <meta property="og:image" content="/images/og-image.png">
     <meta property="og:url" content="https://yourdomain.com/chamber/index.html">
 
-    <link rel="stylesheet" href="/css/normalize.css">
+    <link rel="stylesheet" href="/styles/normalize.css">
     <link rel="stylesheet" href="/styles/styles.css">
     <script src="/scripts/script.js"></script>
 </head>
