Updating things for meta

--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -11,8 +11,10 @@
     <meta property="og:title" content="Timbuktu Chamber of Commerce">
     <meta property="og:description" content="Local events, business directory, and resources for Timbuktu businesses">
     <meta property="og:image" content="/images/og-image.png">
-    <meta property="og:url" content="https://yourdomain.com/chamber/index.html">
-
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
+    <meta property="og:url" content="https://matt-b-anderson.github.io/wdd231/chamber/directory.html">
+    <link rel="icon" href="/images/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="/styles/normalize.css">
     <link rel="stylesheet" href="/styles/styles.css">
     <script src="/scripts/script.js"></script>
@@ -87,7 +89,7 @@
             <p><strong>Timbuktu Chamber of Commerce</strong></p>
             <p>10 Rue De La Paix</p>
             <p>Timbuktu, Mali 999</p>
-            <p><a href="mailto:info@timbuktucc.org">info@timbuktucc.org</a></p>
+            <p><a href=#>info@timbuktucc.org</a></p>
             <p>(223) 555-2300</p>
         </div>
         <div class="footer-social">
