Moved script to the footer

--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -17,7 +17,6 @@
     <link rel="icon" href="/images/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="/styles/normalize.css">
     <link rel="stylesheet" href="/styles/styles.css">
-    <script src="/scripts/script.js"></script>
 </head>
 
 <body>
@@ -25,8 +24,7 @@
         <div class="logo">
             <img src="/images/logo.png" alt="Timbuktu Chamber Logo">
             <div class="branding">
-                <h1>Timbuktu</h1>
-                <p>Chamber of Commerce</p>
+                <h1>Timbuktu Chamber of Commerce</h1>
             </div>
         </div>
         <nav class="main-nav">
@@ -102,6 +100,8 @@
             <p>&copy; <span id="year"></span> Timbuktu Chamber of Commerce</p>
             <p>Last Modification: <span id="lastMod"></span></p>
         </div>
+
+        <script src="/scripts/script.js"></script>
     </footer>
 </body>
 
