--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -10,7 +10,7 @@
     <meta name="author" content="Your Name">
     <meta property="og:title" content="Timbuktu Chamber of Commerce">
     <meta property="og:description" content="Local events, business directory, and resources for Timbuktu businesses">
-    <meta property="og:image" content="/images/og-image.png">
+    <meta property="og:image" content="chamber/images/og-image.png">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
     <meta property="og:url" content="https://matt-b-anderson.github.io/wdd231/chamber/directory.html">
