--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -24,7 +24,8 @@
         <div class="logo">
             <img src="/images/logo.png" alt="Timbuktu Chamber Logo">
             <div class="branding">
-                <h1>Timbuktu Chamber of Commerce</h1>
+                <h2>Timbuktu</h2>
+                <p>Chamber of Commerce</p>
             </div>
         </div>
         <nav class="main-nav">
