--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -14,15 +14,15 @@
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
     <meta property="og:url" content="https://matt-b-anderson.github.io/wdd231/chamber/directory.html">
-    <link rel="icon" href="/images/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="/styles/normalize.css">
-    <link rel="stylesheet" href="/styles/styles.css">
+    <link rel="icon" href="https://matt-b-anderson.github.io/wdd231/chamber/images/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="https://matt-b-anderson.github.io/wdd231/chamber/styles/normalize.css">
+    <link rel="stylesheet" href="https://matt-b-anderson.github.io/wdd231/chamber/styles/styles.css">
 </head>
 
 <body>
     <header class="site-header">
         <div class="logo">
-            <img src="/images/logo.png" alt="Timbuktu Chamber Logo">
+            <img src="https://matt-b-anderson.github.io/wdd231/chamber/images/logo.png" alt="Timbuktu Chamber Logo">
             <div class="branding">
                 <h2>Timbuktu</h2>
                 <p>Chamber of Commerce</p>
@@ -55,7 +55,7 @@
             <article class="panel weather-current">
                 <h3>Current Weather</h3>
                 <div class="weather-info">
-                    <img src="/images/weather-icon.png" alt="Cloudy">
+                    <img src="https://matt-b-anderson.github.io/wdd231/chamber/images/weather-icon.png" alt="Cloudy">
                     <p><strong>75° F</strong></p>
                     <p>Partly Cloudy</p>
                     <p>High: 85°</p>
@@ -92,9 +92,12 @@
             <p>(223) 555-2300</p>
         </div>
         <div class="footer-social">
-            <a href="#"><img src="/images/youtube.svg" alt="YouTube"></a>
-            <a href="#"><img src="/images/twitter.svg" alt="Twitter"></a>
-            <a href="#"><img src="/images/linkedin.svg" alt="LinkedIn"></a>
+            <a href="#"><img src="https://matt-b-anderson.github.io/wdd231/chamber/images/youtube.svg"
+                    alt="YouTube"></a>
+            <a href="#"><img src="https://matt-b-anderson.github.io/wdd231/chamber/images/twitter.svg"
+                    alt="Twitter"></a>
+            <a href="#"><img src="https://matt-b-anderson.github.io/wdd231/chamber/images/linkedin.svg"
+                    alt="LinkedIn"></a>
         </div>
         <div class="footer-info">
             <p>WDD231 Class Project | Marie Martínez</p>
@@ -102,7 +105,7 @@
             <p>Last Modification: <span id="lastMod"></span></p>
         </div>
 
-        <script src="/scripts/script.js"></script>
+        <script src="https://matt-b-anderson.github.io/wdd231/chamber/scripts/script.js"></script>
     </footer>
 </body>
 
