--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -10,10 +10,12 @@
     <meta name="author" content="Your Name">
     <meta property="og:title" content="Timbuktu Chamber of Commerce">
     <meta property="og:description" content="Local events, business directory, and resources for Timbuktu businesses">
+    <meta property="og:type" content="website">
     <meta property="og:image" content="https://matt-b-anderson.github.io/wdd231/chamber/images/og-image.png">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
     <meta property="og:url" content="https://matt-b-anderson.github.io/wdd231/chamber/directory.html">
+    <meta property="fb:app_id" content="Timbuktu">
     <link rel="icon" href="https://matt-b-anderson.github.io/wdd231/chamber/images/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="https://matt-b-anderson.github.io/wdd231/chamber/styles/normalize.css">
     <link rel="stylesheet" href="https://matt-b-anderson.github.io/wdd231/chamber/styles/styles.css">
@@ -45,7 +47,7 @@
     </section>
 
     <main>
-        <h2>Home</h2>
+        <h1>Diretory</h1>
         <section class="panels">
             <article class="panel events">
                 <h3>Events</h3>
