Updated file references

--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -42,7 +42,8 @@
     </header>
 
     <section class="hero">
-        <img src="/images/hero.jpg" alt="scalable, responsive hero image">
+        <img src="https://matt-b-anderson.github.io/wdd231/chamber/images/hero.jpg"
+            alt="scalable, responsive hero image">
         <a href="#" class="cta-button">Keynote Tickets</a>
     </section>
 
