Updated file references

--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -17,8 +17,8 @@
     <meta property="og:url" content="https://matt-b-anderson.github.io/wdd231/chamber/directory.html">
     <meta property="fb:app_id" content="Timbuktu">
     <link rel="icon" href="https://matt-b-anderson.github.io/wdd231/chamber/images/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="/styles/normalize.css">
-    <link rel="stylesheet" href="/styles/styles.css">
+    <link rel="stylesheet" href="styles/normalize.css">
+    <link rel="stylesheet" href="styles/styles.css">
 </head>
 
 <body>
@@ -104,7 +104,7 @@
             <p>Last Modification: <span id="lastMod"></span></p>
         </div>
     </footer>
-    <script src="https://matt-b-anderson.github.io/wdd231/chamber/scripts/script.js"></script>
+    <script src="scripts/script.js"></script>
 </body>
 
 </html>
