--- a/chamber/index.html
+++ b/chamber/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Resource hub for local business in Timbuktu">
     <meta name="author" content="Matthew Anderson">
 
-    <meta property="og:title" content="Timbuktu Chamber of Commerce Home Page">
+    <meta property="og:title" content="Home Page">
     <meta property="og:description" content="Timbuktu Chamber of Commerce Home Page">
     <meta property="og:type" content="website">
     <meta property="og:image" content="https://matt-b-anderson.github.io/wdd231/chamber/images/og-image.png">
@@ -78,7 +78,7 @@
             <p><strong>Timbuktu Chamber of Commerce</strong></p>
             <p>10 Rue De La Paix</p>
             <p>Timbuktu, Mali 999</p>
-            <p><a href="mailto:info@timbuktucc.org">info@timbuktucc.org</a></p>
+            <p><a href=#>info@timbuktucc.org</a></p>
             <p>(223) 555-2300</p>
         </div>
         <div class="footer-info">
