--- a/chamber/index.html
+++ b/chamber/index.html
@@ -7,7 +7,6 @@
     <title>Timbuktu Chamber of Commerce</title>
     <meta name="description" content="Resource hub for local business in Timbuktu">
     <meta name="author" content="Matthew Anderson">
-
     <meta property="og:title" content="Home Page">
     <meta property="og:description" content="Timbuktu Chamber of Commerce Home Page">
     <meta property="og:type" content="website">
@@ -16,7 +15,6 @@
     <meta property="og:image:height" content="630">
     <meta property="og:url" content="https://matt-b-anderson.github.io/wdd231/chamber/index.html">
     <meta property="fb:app_id" content="Timbuktu">
-
     <link rel="icon" href="https://matt-b-anderson.github.io/wdd231/chamber/images/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/styles.css">
@@ -25,9 +23,9 @@
 <body>
     <header class="site-header">
         <div class="logo">
-            <img src="https://matt-b-anderson.github.io/wdd231/chamber/images/logo.png" alt="Timbuktu Chamber Logo">
+            <img src="images/logo.png" alt="Timbuktu Chamber Logo">
             <div class="branding">
-                <h1>Timbuktu</h1>
+                <h2>Timbuktu</h2>
                 <p>Chamber of Commerce</p>
             </div>
         </div>
