Added the join and thank you pages. Moved some of the script into separate script files

--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -106,7 +106,8 @@
             <p>Last Modification: <span id="lastMod"></span></p>
         </div>
     </footer>
-    <script src="scripts/script.js"></script>
+    <script src="scripts/script.js" defer></script>
+    <script src="scripts/directory.js" defer></script>
 </body>
 
 </html>
