--- a/chamber/index.html
+++ b/chamber/index.html
@@ -79,9 +79,14 @@
             <p><a href=#>info@timbuktucc.org</a></p>
             <p>(223) 555-2300</p>
         </div>
+        <div class="footer-social">
+            <a href="#"><img src="images/youtube.svg" alt="YouTube"></a>
+            <a href="#"><img src="images/twitter.svg" alt="Twitter"></a>
+            <a href="#"><img src="images/linkedin.svg" alt="LinkedIn"></a>
+        </div>
         <div class="footer-info">
-            <p>WDD231 Class Project | Your Name</p>
-            <p>&copy; <span id="year"></span> Timbuktu Chamber</p>
+            <p>WDD231 Class Project | Marie Martínez</p>
+            <p>&copy; <span id="year"></span> Timbuktu Chamber of Commerce</p>
             <p>Last Modification: <span id="lastMod"></span></p>
         </div>
     </footer>
