--- a/chamber/index.html
+++ b/chamber/index.html
@@ -53,15 +53,15 @@
         <section class="panels">
             <article class="panel events">
                 <h3>Events</h3>
-                <div id="eventsList"></div>
+                <div id="eventsList" class="panel-content"></div>
             </article>
             <article class="panel weather-current">
                 <h3>Current Weather</h3>
-                <div id="weatherCurrent"></div>
+                <div id="weatherCurrent" class="weather-info"></div>
             </article>
             <article class="panel weather-forecast">
                 <h3>3-Day Forecast</h3>
-                <div id="weatherForecast"></div>
+                <div id="weatherForecast" class="forecast-list"></div>
             </article>
         </section>
 
