Fixed issue with og titles

--- a/chamber/join.html
+++ b/chamber/join.html
@@ -6,7 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Join | Timbuktu Chamber</title>
     <meta name="description" content="Membership application for Timbuktu Chamber of Commerce">
-    <meta name="author" content="Your Name">
+    <meta name="author" content="Matthew Anderson">
+    <meta property="og:title" content="Thank You | Timbuktu Chamber" />
+    <meta property="og:description" content="Your membership application has been received" />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="https://matt-b-anderson.github.io/wdd231/chamber/images/og-image.png" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta property="og:url" content="https://matt-b-anderson.github.io/wdd231/chamber/thankyou.html" />
+    <meta property="fb:app_id" content="Timbuktu" />
     <link rel="icon" href="images/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/styles.css">
