--- a/chamber/thankyou.html
+++ b/chamber/thankyou.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Thank You | Timbuktu Chamber</title>
     <meta name="description" content="Thank you for joining the Timbuktu Chamber of Commerce" />
-    <meta name="author" content="Your Name" />
+    <meta name="author" content="Matthew Anderson" />
     <meta property="og:title" content="Thank You | Timbuktu Chamber" />
     <meta property="og:description" content="Your membership application has been received" />
     <meta property="og:type" content="website" />
