Update title of page

--- a/chamber/join.html
+++ b/chamber/join.html
@@ -7,7 +7,7 @@
     <title>Join | Timbuktu Chamber</title>
     <meta name="description" content="Membership application for Timbuktu Chamber of Commerce">
     <meta name="author" content="Matthew Anderson">
-    <meta property="og:title" content="Thank You | Timbuktu Chamber" />
+    <meta property="og:title" content="Join | Timbuktu Chamber" />
     <meta property="og:description" content="Your membership application has been received" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://matt-b-anderson.github.io/wdd231/chamber/images/og-image.png" />
