--- a/chamber/join.html
+++ b/chamber/join.html
@@ -30,7 +30,9 @@
             </div>
         </div>
         <nav class="main-nav">
-            <button id="menuToggle" class="menu-toggle" aria-controls="nav-list" aria-expanded="false">☰</button>
+            <button id="menuToggle" class="menu-toggle" aria-controls="nav-list" aria-expanded="false">
+                ☰
+            </button>
             <ul class="nav-list">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="directory.html">Directory</a></li>
@@ -65,7 +67,7 @@
                     <input type="text" name="business" title="Business Name" required autocomplete="organization">
                 </label>
                 <label>Membership Level
-                    <select name="level" title="Membership Level" required>
+                    <select name="level" title="Membership Level" required size="4">
                         <option value="NP">NP Membership (No Fee)</option>
                         <option value="Bronze">Bronze Membership</option>
                         <option value="Silver">Silver Membership</option>
