--- a/chamber/thankyou.html
+++ b/chamber/thankyou.html
@@ -30,7 +30,9 @@
             </div>
         </div>
         <nav class="main-nav">
-            <button id="menuToggle" class="menu-toggle" aria-controls="nav-list" aria-expanded="false">☰</button>
+            <button id="menuToggle" class="menu-toggle" aria-controls="nav-list" aria-expanded="false">
+                ☰
+            </button>
             <ul class="nav-list">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="directory.html">Directory</a></li>
