--- a/chamber/join.html
+++ b/chamber/join.html
@@ -33,10 +33,10 @@
             <button id="menuToggle" class="menu-toggle" aria-controls="nav-list" aria-expanded="false">
                 ☰
             </button>
-            <ul class="nav-list">
+            <ul id="nav-list" class="nav-list">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="directory.html">Directory</a></li>
-                <li><a href="join.html" class="active">Join</a></li>
+                <li><a href="join.html">Join</a></li>
                 <li><a href="discover.html">Discover</a></li>
             </ul>
             <button id="themeToggle" class="theme-toggle" aria-label="Toggle dark mode">☾</button>
