Fixed issue with missing H1

--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -45,7 +45,7 @@
     </header>
 
     <main>
-        <section class="visitor-msg" id="visitorMsg"></section>
+        <h1 class="visitor-msg" id="visitorMsg"></h1>
         <section class="discover-grid" id="discoverGrid"></section>
     </main>
 
