Added hero image

--- a/finalproject/index.html
+++ b/finalproject/index.html
@@ -34,7 +34,7 @@
   </header>
 
   <section class="hero">
-    <img src="images/hero.jpg" alt="Film reels on a dark background">
+    <img src="images/hero.webp" alt="Movie with a background">
     <a href="search.html" class="cta-button">Start Searching</a>
   </section>
 
@@ -43,7 +43,7 @@
     <p>Use the search below to look up ratings and reviews for movies and TV shows.</p>
     <form action="search.html" method="get" class="search-form">
       <label for="q">Search for a Movie or TV show</label>
-      <input type="text" id="q" name="q" placeholder="e.g. Inception, Stranger Things…" required>
+      <input type="text" id="q" name="q" placeholder="e.g. Howl's Moving Castle', Stranger Things…" required>
       <button type="submit">Search</button>
     </form>
   </main>
