Added feedback and thankyou pages

--- a/finalproject/index.html
+++ b/finalproject/index.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>The Rating Guide</title>
+    <title>The Rating Guide — Home</title>
     <meta name="description" content="Home page of The Rating Guide" />
     <meta name="author" content="Matthew Anderson" />
-    <meta property="og:title" content="Home Page" />
+    <meta property="og:title" content="The Rating Guide — Home" />
     <meta property="og:description" content="Home page of The Rating Guide" />
     <meta property="og:type" content="website" />
     <meta
