--- a/finalproject/search.html
+++ b/finalproject/search.html
@@ -6,7 +6,7 @@
     <title>The Rating Guide — Search</title>
     <meta name="description" content="Search page of The Rating Guide" />
     <meta name="author" content="Matthew Anderson" />
-    <meta property="og:title" content="Search Page" />
+    <meta property="og:title" content="The Rating Guide — Search" />
     <meta property="og:description" content="Search page of The Rating Guide" />
     <meta property="og:type" content="website" />
     <meta
@@ -51,36 +51,50 @@
         src="images/hero.webp"
         alt="Cinematic movie scene with popcorn and clapperboard"
       />
-      <a href="index.html" class="cta-button">New Search</a>
     </section>
 
     <main class="container">
       <section class="search-wrap">
+        <label for="q" class="search-label"
+          >Search for a Movie or TV show</label
+        >
         <form class="search-form" action="search.html" method="get">
-          <label class="type-label">
-            Type
-            <select name="type">
+          <div class="search-container">
+            <select id="type" name="type">
               <option value="movie">Movie</option>
               <option value="tv">TV Show</option>
             </select>
-          </label>
-          <label for="q">Search for a Movie or TV show</label>
-          <input
-            id="q"
-            name="q"
-            type="text"
-            placeholder="e.g. Inception, Stranger Things…"
-            required
-          />
-          <button type="submit">Search</button>
+            <input
+              id="q"
+              name="q"
+              type="text"
+              placeholder="e.g. Howl's Moving Castle, Stranger Things…"
+              required
+            />
+            <button type="submit" aria-label="Search">
+              <svg
+                viewBox="0 0 24 24"
+                width="20"
+                height="20"
+                fill="currentColor"
+              >
+                <path
+                  d="M15.5 14h-0.79l-0.28-0.27a6.471 6.471 0 001.48-5.34C15.12 5.88 12.24 3 8.88 3S2.64 5.88 2.64 9.39c0 3.51 2.88 6.39 6.39 6.39 1.61 0 3.09-0.59 4.24-1.58l0.27 0.28v0.79l5 4.99L20.49 19l-4.99-5zm-6.62 0c-2.76 0-5-2.25-5-5s2.24-5 5-5 5 2.25 5 5-2.24 5-5 5z"
+                />
+              </svg>
+            </button>
+          </div>
         </form>
       </section>
 
       <section id="results" class="search-results hidden">
         <h1 id="resultTitle"></h1>
-        <div id="poster"></div>
-        <p><strong>Rating:</strong> <span id="rating"></span></p>
-        <div id="parentalGuide"></div>
+        <div class="results-body">
+          <div class="result-details">
+            <div id="poster"></div>
+          </div>
+          <div id="parentalGuide" class="result-pg"></div>
+        </div>
       </section>
     </main>
 
