--- a/finalproject/index.html
+++ b/finalproject/index.html
@@ -50,8 +50,6 @@
         <h1>Welcome!</h1>
 
         <div class="home-content">
-            <section id="dynamic-container" class="dynamic-cards"></section>
-
             <section class="search-wrap">
                 <label for="q" class="search-label">Search for a Movie or TV show</label>
                 <form class="search-form" action="search.html" method="get">
@@ -71,6 +69,9 @@
                     </div>
                 </form>
             </section>
+            <h2>Top 15 Searches</h2>
+            <section id="dynamic-container" class="dynamic-cards"></section>
+
         </div>
     </main>
 
