--- a/finalproject/feedback.html
+++ b/finalproject/feedback.html
@@ -97,7 +97,7 @@
         </div>
     </footer>
 
-    <script src="scripts/feedback.js" defer></script>
+    <script type="module" src="scripts/feedback.js" defer></script>
 </body>
 
 </html>
