--- a/finalproject/search.html
+++ b/finalproject/search.html
@@ -83,7 +83,7 @@
         </div>
     </footer>
 
-    <script src="scripts/search.js" defer></script>
+    <script type="module" src="scripts/search.js" defer></script>
 </body>
 
 </html>
