updated chamber and final project links

--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
             <button class="hamburger" aria-label="Toggle menu">☰</button>
         </div>
         <nav class="navbar">
-            <a href="#">Home</a>
-            <a href="#">Chamber</a>
-            <a href="#">Final</a>
+            <a href="index.html">Home</a>
+            <a href="https://matt-b-anderson.github.io/wdd231/chamber/index.html">Chamber</a>
+            <a href="https://matt-b-anderson.github.io/wdd231/finalproject/index.html">Final</a>
             <a href="#">GitHub Profile</a>
             <a href="#">LinkedIn</a>
         </nav>
