fixed an issue with the thankyou page

--- a/finalproject/thankyou.html
+++ b/finalproject/thankyou.html
@@ -26,12 +26,14 @@
     <header class="site-header">
         <div class="container">
             <div class="title">
-                <img src="images/theratingguidelogo.webp" alt="The Rating Guide Logo" />
+                <img src="images/theratingguidelogo.webp" alt="The Rating Guide Logo" loading="lazy" />
                 <h2 class="logo">The Rating Guide</h2>
             </div>
+            <button id="menuToggle" class="menu-toggle" aria-label="Toggle menu" aria-expanded="false">
+                ☰ </button>
             <nav class="main-nav">
                 <ul class="nav-list">
-                    <li><a href="index.html">Home</a></li>
+                    <li><a href="index.html" class="active">Home</a></li>
                     <li><a href="search.html">Search</a></li>
                     <li><a href="feedback.html">Feedback</a></li>
                 </ul>
